--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
 			<strong>刚烈</strong>——当你受到1点伤害后，你可以判定，若结果为：红色，对伤害来源造成1点伤害；黑色，你弃置其一张牌。<br />
 			<strong>清俭</strong>——每回合限一次，当你在摸牌阶段外获得牌后，你可以展示任意张牌并交给一名其他角色，你给出的牌每有一种类别，当前回合角色本回合手牌上限+1。
 		</td>
-		<th class="jiexiantupo">武将突破</th>
+		<th class="jiexiantupo">界限突破</th>
 	</tr>
 	<tr>
 		<td class="jineng">
@@ -983,15 +983,21 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3">WEI 004</td>
-		<td rowspan="3" class="wei">魏</td>
-		<th rowspan="3">张　辽</th>
-		<td rowspan="3">前将军</td>
-		<td rowspan="3">4</td>
+		<td rowspan="4">WEI 004</td>
+		<td rowspan="4" class="wei">魏</td>
+		<th rowspan="4">张　辽</th>
+		<td rowspan="4">前将军</td>
+		<td rowspan="4">4</td>
 		<td class="jineng">
 			<strong>突袭</strong>——摸牌阶段，你可以改为获得最多两名角色的各一张手牌。
 		</td>
 		<th class="biaozhun">标准</th>
+	</tr>
+	<tr>
+		<td class="jineng">
+			<strong>突袭</strong>——摸牌阶段，你可以少摸任意张牌并获得等量手牌大于等于你的其他角色的各一张手牌。
+		</td>
+		<th class="jiexiantupo">界限突破</th>
 	</tr>
 	<tr>
 		<td class="jineng">
@@ -1008,15 +1014,21 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3">WEI 005</td>
-		<td rowspan="3" class="wei">魏</td>
-		<th rowspan="3">许　褚</th>
-		<td rowspan="3">虎痴</td>
-		<td rowspan="3">4</td>
+		<td rowspan="4">WEI 005</td>
+		<td rowspan="4" class="wei">魏</td>
+		<th rowspan="4">许　褚</th>
+		<td rowspan="4">虎痴</td>
+		<td rowspan="4">4</td>
 		<td class="jineng">
 			<strong>裸衣</strong>——摸牌阶段，你可以少摸一张牌，然后本回合你使用【杀】或【决斗】造成的伤害+1。
 		</td>
 		<th class="biaozhun">标准</th>
+	</tr>
+	<tr>
+		<td class="jineng">
+			<strong>裸衣</strong>——你可以跳过摸牌阶段，亮出牌堆顶的三张牌，获得其中的基本牌、武器牌和【决斗】。然后你是伤害来源的【杀】或【决斗】造成的伤害+1，直到你下回合开始。
+		</td>
+		<th class="jiexiantupo">界限突破</th>
 	</tr>
 	<tr>
 		<td class="jineng">
@@ -1033,16 +1045,23 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3">WEI 006</td>
-		<td rowspan="3" class="wei">魏</td>
-		<th rowspan="3">郭　嘉</th>
-		<td rowspan="3">早终的先知</td>
-		<td rowspan="3">3</td>
+		<td rowspan="4">WEI 006</td>
+		<td rowspan="4" class="wei">魏</td>
+		<th rowspan="4">郭　嘉</th>
+		<td rowspan="4">早终的先知</td>
+		<td rowspan="4">3</td>
 		<td class="jineng">
 			<strong>天妒</strong>——当你的判定牌生效后，你可以获得此牌。<br />
 			<strong>遗计</strong>——当你受到1点伤害后，你可以观看牌堆顶的两张牌，然后将这些牌交给任意角色。
 		</td>
 		<th class="biaozhun">标准</th>
+	</tr>
+	<tr>
+		<td class="jineng">
+			<strong>天妒</strong>——当你的判定牌生效后，你可以获得此牌。<br />
+			<strong>遗计</strong>——当你受到1点伤害后，你可以摸两张牌，然后你可以在至多两名其他角色的武将牌旁分别扣置至多两张手牌。这些角色的下个摸牌阶段开始时获得这些牌。
+		</td>
+		<th class="jiexiantupo">界限突破</th>
 	</tr>
 	<tr>
 		<td class="jineng">
@@ -1410,13 +1429,13 @@
 		<td rowspan="3">讨暴坚垒</td>
 		<td rowspan="3">4</td>
 		<td class='jineng'>
-			<strong>镇军</strong>——准备阶段，你可以弃置一名角色X张牌（X为其手牌数减体力值且至少为1），然后选择一项：1.你弃置等于其中非装备牌数量的牌；2.该角色摸等于其中非装备牌数量的牌。
+			<strong>镇军</strong>——准备阶段，你可以弃置一名角色X张牌（X为其手牌数减体力值），然后选择一项：1.你弃置等于其中非装备牌数量的牌；2.该角色摸X张牌。
 		</td>
 		<th class="jiang">将</th>
 	</tr>
 	<tr>
 		<td class='jineng'>
-			<strong>镇军</strong>——准备阶段，你可以弃置一名角色X张牌（X为其手牌数减体力值），然后选择一项：1.你弃置等于其中非装备牌数量的牌；2.该角色摸X张牌。
+			<strong>镇军</strong>——准备阶段，你可以弃置一名角色X张牌（X为其手牌数减体力值且至少为1），然后选择一项：1.你弃置等于其中非装备牌数量的牌；2.该角色摸等于其中非装备牌数量的牌。
 		</td>
 		<th class="jiang">将<sub>新</sub></th>
 	</tr>
@@ -2182,15 +2201,22 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3">SHU 002</td>
-		<td rowspan="3" class="shu">蜀</td>
-		<th rowspan="3">关　羽</th>
-		<td rowspan="3">美髯公</td>
-		<td rowspan="2">4</td>
+		<td rowspan="4">SHU 002</td>
+		<td rowspan="4" class="shu">蜀</td>
+		<th rowspan="4">关　羽</th>
+		<td rowspan="4">美髯公</td>
+		<td rowspan="3">4</td>
 		<td class="jineng">
 			<strong>武圣</strong>——你可以将一张红色牌当【杀】使用或打出。
 		</td>
 		<th class="biaozhun">标准</th>
+	</tr>
+	<tr>
+		<td class="jineng">
+			<strong>武圣</strong>——你可以将一张红色牌当【杀】使用或打出。<br />
+			<strong>义绝</strong>——出牌阶段限一次，你可以与一名角色拼点：若你赢，其本回合不能使用或打出手牌且所有非锁定技失效；若你没赢，你可以令其回复1点体力。
+		</td>
+		<th class="jiexiantupo">界限突破</th>
 	</tr>
 	<tr>
 		<td class="jineng">
@@ -2208,15 +2234,22 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3">SHU 003</td>
-		<td rowspan="3" class="shu">蜀</td>
-		<th rowspan="3">张　飞</th>
-		<td rowspan="3">万夫不当</td>
-		<td rowspan="3">4</td>
+		<td rowspan="4">SHU 003</td>
+		<td rowspan="4" class="shu">蜀</td>
+		<th rowspan="4">张　飞</th>
+		<td rowspan="4">万夫不当</td>
+		<td rowspan="4">4</td>
 		<td class="jineng">
 			<strong>咆哮</strong>——锁定技，你使用【杀】无次数限制。
 		</td>
 		<th class="biaozhun">标准</th>
+	</tr>
+	<tr>
+		<td class="jineng">
+			<strong>咆哮</strong>——锁定技，你使用【杀】无次数限制。<br />
+			<strong>替身</strong>——限定技，准备阶段，你可以将体力回复至等同于你上回合结束后的体力，然后摸X张牌(X为你回复的体力值)。
+		</td>
+		<th class="jiexiantupo">界限突破</th>
 	</tr>
 	<tr>
 		<td class="jineng">
@@ -2260,15 +2293,22 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3">SHU 005</td>
-		<td rowspan="3" class="shu">蜀</td>
-		<th rowspan="3">赵　云</th>
-		<td rowspan="2">虎威将军</td>
-		<td rowspan="3">4</td>
+		<td rowspan="4">SHU 005</td>
+		<td rowspan="4" class="shu">蜀</td>
+		<th rowspan="4">赵　云</th>
+		<td rowspan="3">虎威将军</td>
+		<td rowspan="4">4</td>
 		<td class="jineng">
 			<strong>龙胆</strong>——你可以将一张【杀】当【闪】、【闪】当【杀】使用或打出。
 		</td>
 		<th class="biaozhun">标准</th>
+	</tr>
+	<tr>
+		<td class="jineng">
+			<strong>龙胆</strong>——你可以将一张【杀】当【闪】、【闪】当【杀】使用或打出。<br />
+			<strong>涯角</strong>——当你于回合外使用或打出手牌时，你可以展示牌堆顶的一张牌。若这两张牌的类别相同，你可以将展示的牌交给一名角色；若类别不同，你可以将展示的牌置入弃牌堆。
+		</td>
+		<th class="jiexiantupo">界限突破</th>
 	</tr>
 	<tr>
 		<td class="jineng">
@@ -2716,8 +2756,9 @@
 		<th class="jiang">将<sub>2012</sub></th>
 	</tr>
 	<td class='jineng'>
-		<strong>当先</strong>——锁定技，回合开始时，你失去1点体力并从弃牌堆获得一张【杀】，然后执行一个额外的出牌阶段。<br />
-		<strong>伏枥</strong>——限定技，当你处于濒死状态时，你可以将体力回复至X点且手牌摸至X张（X为全场势力的数量）。若X大于等于3，你翻面。
+		<strong>当先</strong>——锁定技，回合开始时，你执行一个额外的出牌阶段，此阶段开始时你失去1点体力并从弃牌堆获得一张【杀】。<br />
+		<strong>伏枥</strong>——限定技，当你处于濒死状态时，你可以将体力回复至X点且手牌摸至X张（X为全场势力数），然后“当先”中失去体力的效果改为可选。若X大于等于3，你翻面。<br />
+		<span class="getskill">当先</strong>——锁定技，回合开始时，你执行一个额外的出牌阶段，此阶段开始时，你可以失去1点体力并从弃牌堆获得一张【杀】。
 	</td>
 	<th class="jiang">将<sub>新</sub></th>
 </tr>
@@ -2766,13 +2807,13 @@
 		<td rowspan="2">建兴鞍辔</td>
 		<td rowspan="2">4</td>
 		<td class='jineng'>
-			<strong>奔袭</strong>——锁定技，当你于回合内使用牌时，本回合你计算与其他角色的距离-1；若你与所有其他角色的距离均为1，则你无视防具且你使用【杀】可以多选择一个目标。
+			<strong>奔袭</strong>——锁定技，当你于回合内使用牌时，本回合你计算与其他角色的距离-1；你的回合内，若你与所有其他角色的距离均为1，则你无视其他角色的防具且你使用【杀】可以多指定一个目标。
 		</td>
 		<th class="jiang">将<sub>2014</sub></th>
 	</tr>
 	<tr>
 		<td class='jineng'>
-			<strong>奔袭</strong>——锁定技，当你于回合内使用牌时，本回合你与其他角色的距离-1；你的回合内，若你与所有其他角色的距离均为1，则你使用仅指定一个目标的牌时选择至多两项：1.此牌目标+1；2.此牌无视防具；3.此牌不能被抵消；4.此牌造成伤害时，摸一张牌。
+			<strong>奔袭</strong>——锁定技，当你于回合内使用牌时，本回合你计算与其他角色的距离-1；你的回合内，若你与所有其他角色的距离均为1，则你使用仅指定一个目标的【杀】或普通锦囊牌时依次选择至多两项：1.此牌目标+1；2.此牌无视防具；3.此牌不能被抵消；4.此牌造成伤害时，摸一张牌。
 		</td>
 		<th class="jiang">将<sub>新</sub></th>
 	</tr>
@@ -2811,7 +2852,7 @@
 		<td class='jineng'>
 			<strong>战绝</strong>——出牌阶段，你可以将所有手牌当【决斗】使用，然后你和受伤的角色各摸一张牌。若你摸过两张或更多的牌，则本回合"战绝"失效。<br />
 			<strong>勤王</strong>——主公技，你可以弃置一张牌，然后发动一次"激将"。响应此"激将"打出【杀】的角色摸一张牌。<br/>
-			<span class="get_skill">——主公技，其他蜀势力角色可以在你需要时代替你使用或打出【杀】。</span>
+			<span class="getskill">——主公技，其他蜀势力角色可以在你需要时代替你使用或打出【杀】。</span>
 		</td>
 		<th class="jiang">将<sub>2015</sub></th>
 	</tr>
@@ -3806,13 +3847,13 @@
 		<td rowspan="2">不动之督</td>
 		<td rowspan="2">4</td>
 		<td class='jineng'>
-			<strong>胆守</strong>——出牌阶段，你可以弃置X张牌并选择你攻击范围内的一名其他角色（X为你此阶段内发动"胆守"的次数），若X：是1，你弃置其一张牌；是2，其将一张牌交给你；是3，你对其造成1点伤害；大于等于4，你与其各摸两张牌。
+			<strong>胆守</strong>——出牌阶段，你可以弃置X张牌并选择你攻击范围内的一名其他角色（X为你此阶段内发动"胆守"的次数），若X：为1，你弃置其一张牌；为2，其将一张牌交给你；为3，你对其造成1点伤害；大于等于4，你与其各摸两张牌。
 		</td>
 		<th class="jiang">将<sub>2013</sub></th>
 	</tr>
 	<tr>
 		<td class='jineng'>
-			<strong>胆守</strong>——每回合限一次，当你成为基本牌或锦囊牌的目标后，你可以摸X张牌（X为你本回合成为牌的目标次数）；当前回合角色的结束阶段，若你本回合没有以此法摸牌，你可以弃置与其手牌数相同的牌数对其造成1点伤害。
+			<strong>胆守</strong>——每个回合限一次，当你成为基本牌或锦囊牌的目标后，你可以摸X张牌（X为你本回合成为牌的目标次数）；当前回合角色的结束阶段，若你本回合没有以此法摸牌，你可以弃置与其手牌数相同的牌数对其造成1点伤害。
 		</td>
 		<th class="jiang">将<sub>新</sub></th>
 	</tr>
@@ -3869,7 +3910,7 @@
 	</tr>
 	<tr>
 		<td class='jineng'>
-			<strong>邀名</strong>——每回合每个选项限一次，当你造成或受到伤害后，你可以选择一项：1.弃置手牌数大于你的一名角色的一张手牌；2.令手牌数小于你的一名角色摸一张牌；3.令手牌数与你相同的角色弃置至多两张牌然后摸等量的牌。
+			<strong>邀名</strong>——每回合每个选项限一次，当你造成或受到伤害后，你可以选择一项：1.弃置手牌数大于你的一名角色的一张手牌；2.令手牌数小于你的一名角色摸一张牌；3.令手牌数与你相同的一名角色弃置至多两张牌然后摸等量的牌。
 		</td>
 		<th class="jiang">将<sub>新</sub></th>
 	</tr>
@@ -4292,19 +4333,27 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3">QUN 002</td>
-		<td rowspan="3" class="qun">群</td>
-		<th rowspan="3">吕　布</th>
-		<td rowspan="3">武的化身</td>
-		<td rowspan="3">5</td>
+		<td rowspan="4">QUN 002</td>
+		<td rowspan="4" class="qun">群</td>
+		<th rowspan="4">吕　布</th>
+		<td rowspan="4">武的化身</td>
+		<td>4</td>
 		<td class="jineng">
-			<strong>无双</strong>——锁定技，当你使用【杀】指定一个目标后，该角色需依次使用两张【闪】才能抵消此【杀】；当你使用【决斗】指定一个目标后，或成为一名角色使用【决斗】的目标后，该角色每次响应此【决斗】需依次打出两张【杀】。
+			<strong>无双</strong>——锁定技，你使用的【杀】需两张【闪】才能抵消；与你进行【决斗】的角色每次需打出两张【杀】。
 		</td>
 		<th class="biaozhun">标准</th>
 	</tr>
 	<tr>
+		<td rowspan="3">5</td>
 		<td class="jineng">
-			<strong>无双</strong>——锁定技，当你使用【杀】指定一个目标后，该角色需依次使用两张【闪】才能抵消此【杀】；当你使用【决斗】指定一个目标后，或成为一名角色使用【决斗】的目标后，该角色每次响应此【决斗】需依次打出两张【杀】。<br />
+			<strong>无双</strong>——锁定技，你使用的【杀】需两张【闪】才能抵消；与你进行【决斗】的角色每次需打出两张【杀】。<br />
+			<strong>利驭</strong>——当你使用【杀】造成伤害后，受伤角色可令你获得其一张牌，然后你视为对另一名角色使用一张【决斗】。
+		</td>
+		<th class="jiexiantupo">界限突破</th>
+	</tr>
+	<tr>
+		<td class="jineng">
+			<strong>无双</strong>——锁定技，你使用的【杀】需两张【闪】才能抵消；与你进行【决斗】的角色每次需打出两张【杀】。<br />
 			<strong>利驭</strong>——当你使用【杀】对一名其他角色造成伤害后，你可获得其区域里的一张牌。然后若获得的牌不是装备牌，其摸一张牌；若获得的牌是装备牌，则视为你对由其指定的另一名角色使用一张【决斗】。
 		</td>
 		<th class="jiexiantupo">武将突破</th>
@@ -4312,7 +4361,7 @@
 	<tr>
 		<td class="jineng">
 			珠联璧合：貂蝉<br />
-			<strong>无双</strong>——锁定技，当你使用【杀】指定一个目标后，该角色需依次使用两张【闪】才能抵消此【杀】；当你使用【决斗】指定一个目标后，或成为一名角色使用【决斗】的目标后，该角色每次响应此【决斗】需依次打出两张【杀】。
+			<strong>无双</strong>——锁定技，你使用的【杀】需两张【闪】才能抵消；与你进行【决斗】的角色每次需打出两张【杀】。
 		</td>
 		<th class="guozhan">国战</th>
 	</tr>
@@ -5539,7 +5588,7 @@
 			<strong>无谋</strong>——锁定技，当你使用普通锦囊牌时，你弃1枚"暴怒"标记或失去1点体力。<br />
 			<strong>神愤</strong>——出牌阶段限一次，你可以弃6枚"暴怒"标记，然后对所有其他角色各造成1点伤害，这些角色先各弃置装备区里的所有牌，再弃置四张手牌，最后你翻面。<br />
 			<strong>无前</strong>——出牌阶段，你可以弃2枚"暴怒"标记并选择一名其他角色，然后本回合你获得"无双"且该角色的防具失效。<br />
-			<span class="getskill">无双</span>——锁定技，当你使用【杀】指定一个目标后，该角色需依次使用两张【闪】才能抵消此【杀】；当你使用【决斗】指定一个目标后，或成为一名角色使用【决斗】的目标后，该角色每次响应此【决斗】需依次打出两张【杀】。
+			<span class="getskill">无双</span>——锁定技，你使用的【杀】需两张【闪】才能抵消；与你进行【决斗】的角色每次需打出两张【杀】。
 		</td>
 		<th class="lin">林</th>
 	</tr>
@@ -5710,5 +5759,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' /><br />© 2006-2019 | 最后更新 2019/10/23</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' /><br />© 2006-2019 | 最后更新 2019/10/24</footer>
 </body></html>
