--- a/index.html
+++ b/index.html
@@ -2262,6 +2262,18 @@
 </tr>
 
 <tr>
+	<td>WEI ???</td>
+	<td class="wei">魏</td>
+	<th>辛　毗</th>
+	<td>一节肃六军</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>持节</strong>——每个回合限一次，当你成为其他角色使用牌的目标后，你可以发动此技能。若如此做，此牌对你造成伤害后，你可以防止此牌对其他角色造成的伤害；此牌结算结束后，若此牌未造成过伤害，你获得之。<br/>
+		<strong>引裾</strong>——限定技，出牌阶段，指定一名其他角色。若如此做，当你于本回合内使用牌指定其为目标后，你摸一张牌；当你于本回合内对其造成伤害时，防止次伤害并令其回复等量的体力。</td>
+	<th class='online'>待定</th>
+</tr>
+
+<tr>
 	<td rowspan="3">SHU 001</td>
 	<th rowspan="3" class="shu zhugong">蜀</th>
 	<th rowspan="3">刘　备</th>
@@ -5293,7 +5305,7 @@
 	<td>QUN 073</td>
 	<td class='qun'>群</td>
 	<th>张琪瑛</th>
-	<td></td>
+	<td>禳祷西东 </td>
 	<td>3</td>
 	<td class='jineng'>
 		<strong>法箓</strong>——锁定技，当你的牌因弃置而移至弃牌堆后，根据这些牌的花色，你获得对应标记：黑桃牌，你获得1枚“紫微”；梅花牌，你获得1枚“后土”；红桃牌，你获得1枚“玉清”；方块牌，你获得1枚“勾陈”（每种标记限拥有一个）。游戏开始时，你获得以上四种标记。<br />
@@ -5370,6 +5382,18 @@
 		<strong>守邺</strong>——每回合限一次，当你成为其他角色使用牌的唯一目标后，你可以与其进行对策；若你对策成功，则此牌对你无效，且此牌进入弃牌堆时改为由你获得。<br/>
 		<strong>烈直</strong>——准备阶段，你可选择至多两名其他角色，依次弃置其区域内的一张牌；若你受到过伤害，则直至你的下个结束阶段时，此技能无效。</td>
 	<th class='online'>移动版</th>
+</tr>
+
+<tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>李　肃</th>
+	<td>魔使</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>利熏</strong>——锁定技，当你受到伤害时，你防止此伤害，然后获得等同于伤害值的“珠”标记。出牌阶段开始时，你进行一次判定，若结果点数小于“珠”的数量，你弃置等同于“珠”数量的手牌（若弃牌的牌数不够，则失去剩余数量的体力值）。<br/>
+		<strong>馈珠</strong>——出牌阶段结束时，你可以选择体力值全场最多的一名其他角色，将手牌摸至与该角色相同（最多摸至五张），然后该角色观看你的手牌，弃置任意张手牌并从观看的牌中获得等量的牌。若其获得的牌大于一张，则你选择一项：移去一个“珠”；或令其对其攻击范围内的一名角色造成1点伤害。</td>
+	<th class='online'>待定</th>
 </tr>
 
 <tr>
@@ -5607,5 +5631,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2019 | 最后更新 2019/12/07</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2019 | 最后更新 2019/12/09</footer>
 </body></html>
