添加张温、界左慈、界张角、界于吉、高顺、典韦、于禁、孟获

--- a/index.html
+++ b/index.html
@@ -1342,23 +1342,20 @@
 </tr>
 
 <tr>
-	<td rowspan="3">WEI 012</td>
-	<td rowspan="3" class="wei">魏</td>
-	<th rowspan="3">典　韦</th>
-	<td rowspan="3">古之恶来</td>
-	<td rowspan="3">4</td>
-	<td class="jineng" rowspan="2">
-			珠联璧合：曹操<br />
-		<strong>强袭</strong>——出牌阶段限一次，你可以失去1点体力或弃置一张武器牌，并对你攻击范围内的一名其他角色造成1点伤害。</td>
+	<td rowspan="2">WEI 012</td>
+	<td rowspan="2" class="wei">魏</td>
+	<th rowspan="2">典　韦</th>
+	<td rowspan="2">古之恶来</td>
+	<td rowspan="2">4</td>
+	<td class="jineng">
+		<strong>强袭</strong>——出牌阶段限2次，你可以失去1点体力或弃置一张武器牌，并对一名其他角色造成1点伤害。一个回合内，发动不能对本回合已发动过强袭的目标再次发动强袭。</td>
 	<th class="huo">火</th>
 </tr>
 <tr>
-	<th class="guozhan">国战</th>
-</tr>
-<tr>
 	<td class="jineng">
-		<strong>强袭</strong>——出牌阶段各限一次，你可以失去1点体力或弃置一张武器牌，并对你攻击范围内的一名其他角色造成1点伤害。你于同一阶段内不能指定同一名角色为目标。</td>
-	<th class="huo">火<sub>新</sub></th>
+		珠联璧合：曹操<br />
+		<strong>强袭</strong>——出牌阶段限一次，你可以失去1点体力或弃置一张武器牌，并对你攻击范围内的一名其他角色造成1点伤害。</td>
+	<th class="guozhan">国战</th>
 </tr>
 
 <tr>
@@ -1557,19 +1554,14 @@
 </tr>
 
 <tr>
-	<td rowspan="3">WEI 024</td>
-	<td rowspan="3" class="wei">魏</td>
-	<th rowspan="3">于　禁</th>
-	<td rowspan="3">讨暴坚垒</td>
-	<td rowspan="3">4</td>
-	<td class='jineng'>
-		<strong>镇军</strong>——准备阶段，你可以弃置一名角色X张牌（X为其手牌数减体力值），然后选择一项：1.你弃置等于其中非装备牌数量的牌；2.该角色摸X张牌。</td>
-	<th class="jiang">将</th>
-</tr>
-<tr>
+	<td rowspan="2">WEI 024</td>
+	<td rowspan="2" class="wei">魏</td>
+	<th rowspan="2">于　禁</th>
+	<td rowspan="2">讨暴坚垒</td>
+	<td rowspan="2">4</td>
 	<td class='jineng'>
 		<strong>镇军</strong>——准备阶段，你可以弃置一名角色X张牌（X为其手牌数减体力值且至少为1），然后选择一项：1.你弃置等于其中非装备牌数量的牌；2.该角色摸等于其中非装备牌数量的牌。</td>
-	<th class="jiang">将<sub>新</sub></th>
+	<th class="jiang">将</th>
 </tr>
 <tr>
 	<td class='jineng'>
@@ -2269,7 +2261,7 @@
 	<td class='jineng'>
 		<strong>持节</strong>——每个回合限一次，当你成为其他角色使用牌的目标后，你可以发动此技能。若如此做，此牌对你造成伤害后，你可以防止此牌对其他角色造成的伤害；此牌结算结束后，若此牌未造成过伤害，你获得之。<br/>
 		<strong>引裾</strong>——限定技，出牌阶段，指定一名其他角色。若如此做，当你于本回合内使用牌指定其为目标后，你摸一张牌；当你于本回合内对其造成伤害时，防止次伤害并令其回复等量的体力。</td>
-	<th class='online'>待定</th>
+	<th class='online'>上兵伐谋</th>
 </tr>
 
 <tr>
@@ -2581,25 +2573,22 @@
 </tr>
 
 <tr>
-	<td rowspan="3">SHU 014</td>
-	<td rowspan="3" class="shu">蜀</td>
-	<th rowspan="3">孟　获</th>
-	<td rowspan="3">南蛮王</td>
-	<td rowspan="3">4</td>
-	<td class="jineng" rowspan="2">
-		珠联璧合：祝融<br />
+	<td rowspan="2">SHU 014</td>
+	<td rowspan="2" class="shu">蜀</td>
+	<th rowspan="2">孟　获</th>
+	<td rowspan="2">南蛮王</td>
+	<td rowspan="2">4</td>
+	<td class="jineng">
 		<strong>祸首</strong>——锁定技，【南蛮入侵】对你无效；当其他角色使用【南蛮入侵】指定目标后，你代替其成为此牌造成的伤害的来源。<br />
-		<strong>再起</strong>——摸牌阶段，你可以改为亮出牌堆顶的X张牌（X为你已损失的体力值），然后回复等同于其中红桃牌数量的体力，并获得其余的牌。</td>
+		<strong>再起</strong>——摸牌阶段，若你已受伤，你可以改为亮出牌堆顶的X张牌（X为你已损失的体力值+1），然后回复等同于其中红桃牌数量的体力，并获得其余的牌。</td>
 	<th class="lin">林</th>
 </tr>
 <tr>
-	<th class="guozhan">国战</th>
-</tr>
-<tr>
 	<td class="jineng">
+		珠联璧合：祝融<br />
 		<strong>祸首</strong>——锁定技，【南蛮入侵】对你无效；当其他角色使用【南蛮入侵】指定目标后，你代替其成为此牌造成的伤害的来源。<br />
-		<strong>再起</strong>——弃牌阶段结束时，你可以令至多X名角色各选择一项（X为本回合进入弃牌堆的红色牌的数量）：1.摸1张牌；2.令已受伤的你回复1点体力。</td>
-	<th class="lin">林<sub>新</sub></th>
+		<strong>再起</strong>——摸牌阶段，你可以改为亮出牌堆顶的X张牌（X为你已损失的体力值），然后回复等同于其中红桃牌数量的体力，并获得其余的牌。</td>
+	<th class="guozhan">国战</th>
 </tr>
 
 <tr>
@@ -3118,7 +3107,7 @@
 	<td class='jineng'>
 		<strong>机捷</strong>——出牌阶段限一次，你可以观看牌堆底的一张牌，然后交给任意角色。<br />
 		<strong>急援</strong>——当一名角色进入濒死或你交给一名其他角色牌时，你可令该角色摸一张牌。</td>
-	<th class="biaozhun">标准<sub>新</sub></th>
+	<th class="biaozhun">上兵伐谋</th>
 </tr>
 
 <tr>
@@ -3137,10 +3126,20 @@
 	<td>SHU 059</td>
 	<td class='shu'>蜀</td>
 	<th>蒲　元</th>
-	<td></td>
-	<td>3</td>
+	<td>淬炼百兵</td>
+	<td>4</td>
 	<td class='jineng'>
-		<strong></strong></td>
+		<strong>天匠</strong>——游戏开始时，你随机获得两张不同副类别的装备牌，并置入你的装备区。出牌阶段，你装备区里的牌可以移动至其他角色的装备区并替换其原有装备。<br />
+		<strong>铸刃</strong>——出牌阶段限一次，你可以弃置一张手牌。根据此牌的花色点数，你有一定概率打造成功并获得一张武器牌（若打造失败或武器已有则改为摸一张【杀】，花色决定武器名称，点数决定成功率）。此武器牌进入弃牌堆时，将其移出游戏。<br />
+		红桃：红缎枪，红桃A，攻击范围3，每回合限一次，当你使用【杀】造成伤害后，你可以进行一次判定，若结果为红色，你回复1点体力。<br />
+		方块：烈淬刀，方块A，攻击范围2，你使用【杀】对目标角色造成伤害时，你可以弃置一张【杀】或武器牌，令此伤害+1。<br />
+		梅花：水波剑，梅花A，攻击范围2，当你于出牌阶段使用第一张牌时，若此牌是锦囊牌或【杀】，你可以多选择一个目标。<br />
+		黑桃：混毒弯匕，黑桃A，攻击范围1，你使用的黑色【杀】指定单一目标后，你可令该角色获得此【杀】，然后其失去1点体力。<br />
+		闪电：天雷刃，黑桃A，攻击范围4，你使用【杀】仅指定一名角色为目标后，可令其进行一次判定，若结果为黑桃2~9，该角色受到3点雷电伤害，然后此【杀】对其无效。
+
+	
+	
+	</td>
 	<th class="jiang">原<sub>2017</sub></th>
 </tr>
 
@@ -3271,6 +3270,18 @@
 		<strong>许身</strong>——限定技，出牌阶段，你可以失去X点体力（X为场上男性角色的数量）。若你以此法进入了濒死状态，则当你因一名角色而脱离此濒死状态后，你可以令其获得技能〖武圣〗和〖当先〗。<br />
 		<span class="getskill">镇南</span>——当你成为其他角色使用的牌的目标后，若此牌的目标数大于该角色的体力值，则你可以弃置一张牌并对其造成1点伤害。</td>
 	<th class='online'>移动版</th>
+</tr>
+
+<tr>
+	<td>SHU ???</td>
+	<td class="shu">蜀</td>
+	<th>张　温</th>
+	<td>冲天孤鹭</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>颂蜀</strong>——出牌阶段限一次，你可以与一名其他角色拼点，若你没赢，该角色摸2张牌；若你赢，本回合内此技能视为未发动过。<br />
+		<strong>思辨</strong>——摸牌阶段，你可以放弃摸牌，改为亮出牌堆顶的四张牌，然后获得其中所有点数最大与点数最小的牌。若获得的牌是两张且点数之差小于存活人数，则你可以将剩余的牌交给手牌数最少的角色。</td>
+	<th class='online'>上兵伐谋</th>
 </tr>
 
 <tr>
@@ -4439,15 +4450,21 @@
 </tr>
 
 <tr>
-	<td rowspan="2">QUN 009</td>
-	<td rowspan="2" class="qun">群</td>
-	<th rowspan="2">左　慈</th>
-	<td rowspan="2">谜之仙人</td>
-	<td rowspan="2">3</td>
+	<td rowspan="3">QUN 009</td>
+	<td rowspan="3" class="qun">群</td>
+	<th rowspan="3">左　慈</th>
+	<td rowspan="3">谜之仙人</td>
+	<td rowspan="3">3</td>
 	<td class="jineng">
 		<strong>化身</strong>——游戏开始时，你随机获得两张武将牌作为"化身"牌，然后亮出其中一张，获得该"化身"牌的一个技能。回合开始时或结束后，你可以更改亮出的"化身"牌。<br />
 		<strong>新生</strong>——当你受到1点伤害后，你可以获得一张新的"化身"牌。</td>
 	<th class="shan">山</th>
+</tr>
+<tr>
+	<td class="jineng">
+		<strong>化身</strong>——游戏开始时，你随机获得3张武将牌，然后亮出其中一张。你获得亮出"化身"牌的一个技能（限定技、觉醒技、主公技除外），且性别和势力视为与"化身"牌相同。回合开始时或回合结束时，你可以选择一项：更改亮出的化身牌；或移去至多两张"化身"牌并获得等量新的"化身"牌。<br />
+		<strong>新生</strong>——当你受到1点伤害后，你可以获得一张新的"化身"牌。 </td>
+	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
 	<td class="jineng">
@@ -4458,16 +4475,23 @@
 </tr>
 
 <tr>
-	<td rowspan="2">QUN 010</td>
-	<th rowspan="2" class="qun zhugong">群</th>
-	<th rowspan="2">张　角</th>
-	<td rowspan="2">天公将军</td>
-	<td rowspan="2">3</td>
+	<td rowspan="3">QUN 010</td>
+	<th rowspan="3" class="qun zhugong">群</th>
+	<th rowspan="3">张　角</th>
+	<td rowspan="3">天公将军</td>
+	<td rowspan="3">3</td>
 	<td class="jineng">
 		<strong>雷击</strong>——每当你使用或打出【闪】时，你可以令一名其他角色进行判定，若结果为：黑桃，你对该角色造成2点雷电伤害；梅花，你回复1点体力，然后对该角色造成1点雷电伤害。<br />
 		<strong>鬼道</strong>——当一名角色的判定牌生效前，你可以打出一张黑色牌替换之。<br />
 		<strong>黄天</strong>——主公技，其他群势力角色的出牌阶段限一次，该角色可以将一张【闪】或【闪电】交给你。</td>
 	<th class="feng">风<sub>新</sub></th>
+</tr>
+<tr>
+	<td class="jineng">
+		<strong>雷击</strong>——当你使用或打出【闪】或【闪电】时，你可以进行判定。当你进行判定后（与天妒同一时机，除因暴虐进行的判定外），若判定结果为：黑桃，你选择一名其他角色，对其造成2点雷电伤害；梅花，你回复1点体力，然后你选择一名其他角色，对其造成1点雷电伤害。<br />
+		<strong>鬼道</strong>——当一名角色的判定牌生效前，你可以打出一张黑色牌替换之。若你打出的牌是黑桃2~9，则你摸一张牌。<br />
+		<strong>黄天</strong>——主公技，其他群势力角色的出牌阶段限一次，该角色可以将一张【闪】或【闪电】交给你。</td>
+	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
 	<td class="jineng">
@@ -4477,15 +4501,21 @@
 </tr>
 
 <tr>
-	<td rowspan="2">QUN 011</td>
-	<td rowspan="2" class="qun">群</td>
-	<th rowspan="2">于　吉</th>
-	<td>太平道人</td>
-	<td rowspan="2">3</td>
+	<td rowspan="3">QUN 011</td>
+	<td rowspan="3" class="qun">群</td>
+	<th rowspan="3">于　吉</th>
+	<td rowspan="2">太平道人</td>
+	<td rowspan="3">3</td>
 	<td class="jineng">
 		<strong>蛊惑</strong>——每名角色的回合限一次，你可以扣置一张手牌当任意一张牌使用或打出。其他角色可质疑并翻开此牌：若为假则此牌作废，若为真则质疑者获得"缠怨"。<br />
 		<span class="getskill">缠怨</span>——锁定技，你不能对“蛊惑”进行质疑；锁定技，若你的体力值为1，你除“缠怨”外的技能无效。</td>
 	<th class="feng">风<sub>新</sub></th>
+</tr>
+<tr>
+	<td class="jineng">
+		<strong>蛊惑</strong>——每名角色的回合限一次，你可以扣置一张手牌当任意一张基本牌或普通锦囊牌使用或打出。其他角色可以进行质疑并翻开此牌：若为假则此牌作废，且质疑者摸一张牌；若为真则所有质疑者需要选择弃置一张牌或失去1点体力,并且获得"缠怨"。<br />
+		<span class="getskill">缠怨</span>——锁定技，你不能质疑"蛊惑"；你的体力值小于等于1时，你的其他技能失效。</td>
+	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
 	<td>魂绕左右</td>
@@ -4780,7 +4810,7 @@
 	<td>攻无不克</td>
 	<td>4</td>
 	<td class='jineng'>
-		<strong>陷阵</strong>——出牌阶段限一次，你可以与一名角色拼点：若你赢，本回合你无视该角色的防具，且对其使用牌没有距离和次数限制；若你没赢，本回合你不能使用【杀】。<br />
+		<strong>陷阵</strong>——出牌阶段限一次，你可以与一名角色拼点：若你赢，本回合你无视该角色的防具、对其使用牌没有距离和次数限制，且你使用普通锦囊牌或【杀】仅指定单一目标后，可额外指定该角色为目标；若你没赢，本回合你不能使用【杀】且你的【杀】不计入手牌上限。<br />
 		<strong>禁酒</strong>——锁定技，你的【酒】视为【杀】。</td>
 	<th class="jiang">将</th>
 </tr>
@@ -5392,7 +5422,7 @@
 	<td class='jineng'>
 		<strong>利熏</strong>——锁定技，当你受到伤害时，你防止此伤害，然后获得等同于伤害值的“珠”标记。出牌阶段开始时，你进行一次判定，若结果点数小于“珠”的数量，你弃置等同于“珠”数量的手牌（若弃牌的牌数不够，则失去剩余数量的体力值）。<br/>
 		<strong>馈珠</strong>——出牌阶段结束时，你可以选择体力值全场最多的一名其他角色，将手牌摸至与该角色相同（最多摸至五张），然后该角色观看你的手牌，弃置任意张手牌并从观看的牌中获得等量的牌。若其获得的牌大于一张，则你选择一项：移去一个“珠”；或令其对其攻击范围内的一名角色造成1点伤害。</td>
-	<th class='online'>待定</th>
+	<th class='online'>上兵伐谋</th>
 </tr>
 
 <tr>
@@ -5630,5 +5660,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2019 | 最后更新 2019/12/09</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2019 | 最后更新 2019/12/20</footer>
 </body></html>
