新增胡金定

--- a/index.html
+++ b/index.html
@@ -3285,6 +3285,19 @@
 </tr>
 
 <tr>
+	<td>SHU ???</td>
+	<td class="shu">蜀</td>
+	<th>胡金定</th>
+	<td></td>
+	<td>2/6</td>
+	<td class='jineng'>
+		<strong>仁释</strong>——锁定技，当你于已受伤的状态下受到【杀】造成的伤害时，你防止此伤害并获得此【杀】，然后扣减1点体力上限。<br />
+		<strong>武缘</strong>——出牌阶段限一次，你可以交给一名其他角色一张【杀】，然后你回复1点体力，其摸一张牌；若此【杀】为红色，则其额外回复1点体力；若此【杀】为属性杀，则其额外摸一张牌。<br />
+		<strong>怀子</strong>——锁定技，你的手牌上限等于你的体力上限。</td>
+	<th class='online'>移动版</th>
+</tr>
+
+<tr>
 	<td rowspan="3">WU 001</td>
 	<th rowspan="3" class="wu zhugong">吴</th>
 	<th rowspan="3">孙　权</th>
@@ -5660,5 +5673,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2019 | 最后更新 2019/12/20</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2019 | 最后更新 2019/12/24</footer>
 </body></html>
