--- a/index.html
+++ b/index.html
@@ -3136,11 +3136,8 @@
 		梅花：水波剑，梅花A，攻击范围2，当你于出牌阶段使用第一张牌时，若此牌是锦囊牌或【杀】，你可以多选择一个目标。<br />
 		黑桃：混毒弯匕，黑桃A，攻击范围1，你使用的黑色【杀】指定单一目标后，你可令该角色获得此【杀】，然后其失去1点体力。<br />
 		闪电：天雷刃，黑桃A，攻击范围4，你使用【杀】仅指定一名角色为目标后，可令其进行一次判定，若结果为黑桃2~9，该角色受到3点雷电伤害，然后此【杀】对其无效。
-
-	
-	
 	</td>
-	<th class="jiang">原<sub>2017</sub></th>
+	<th class="online">限定</th>
 </tr>
 
 <tr>
@@ -3280,7 +3277,7 @@
 	<td>3</td>
 	<td class='jineng'>
 		<strong>颂蜀</strong>——出牌阶段限一次，你可以与一名其他角色拼点，若你没赢，该角色摸2张牌；若你赢，本回合内此技能视为未发动过。<br />
-		<strong>思辨</strong>——摸牌阶段，你可以放弃摸牌，改为亮出牌堆顶的四张牌，然后获得其中所有点数最大与点数最小的牌。若获得的牌是两张且点数之差小于存活人数，则你可以将剩余的牌交给手牌数最少的角色。</td>
+		<strong>思辩</strong>——摸牌阶段，你可以放弃摸牌，改为亮出牌堆顶的四张牌，然后获得其中所有点数最大与点数最小的牌。若获得的牌是两张且点数之差小于存活人数，则你可以将剩余的牌交给手牌数最少的角色。</td>
 	<th class='online'>上兵伐谋</th>
 </tr>
 
@@ -5205,8 +5202,8 @@
 	<th>许　劭</th>
 	<td></td>
 	<td>3</td>
-	<td class='jineng'></td>
-	<th class="daiding"></th>
+	<td class='jineng'><strong>评荐</strong>——你可以于以下时机弃置一张牌：出牌阶段限一次；结束阶段开始时；当你受到伤害后。若如此做，从你的已开通武将中随机出现三张拥有与你弃牌时机相同技能的武将牌，你选择其中一个武将并发动其技能。每个技能只能发动一次。</td>
+	<th class="online">限定</th>
 </tr>
 
 <tr>
