--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,6 @@
 	<td rowspan="2">王佐之才</td>
 	<td rowspan="2">3</td>
 	<td class="jineng">
-		珠联璧合：荀攸<br />
 		<strong>驱虎</strong>——出牌阶段限一次，你可以与体力值大于你的一名角色拼点：若你赢，你令该角色对其攻击范围内的另一名角色造成1点伤害；若你没赢，其对你造成1点伤害。<br />
 		<strong>节命</strong>——当你受到1点伤害后，你可以令一名角色将手牌摸至X张（X为其体力上限且最多为5）。</td>
 	<th class="huo">神话再临·火</th>
@@ -1478,7 +1477,7 @@
 </tr>
 <tr>
 	<td class='jineng'>
-			珠联璧合：荀彧<br />
+		珠联璧合：荀彧<br />
 		<strong>奇策</strong>——出牌阶段限一次，你可以将所有手牌当任意一张普通锦囊牌使用，以此法使用的目标数不能超过你的手牌数。结算完成后，你可以变更副将。<br />
 		<strong>智愚</strong>——当你受到伤害后，你可以摸一张牌，然后展示所有手牌，若颜色均相同，伤害来源弃置一张手牌。</td>
 	<th class='bian'>变</th>
@@ -3254,6 +3253,18 @@
 		<strong>武缘</strong>——出牌阶段限一次，你可以交给一名其他角色一张【杀】，然后你回复1点体力，其摸一张牌；若此【杀】为红色，则其额外回复1点体力；若此【杀】为属性杀，则其额外摸一张牌。<br />
 		<strong>怀子</strong>——锁定技，你的手牌上限等于你的体力上限。</td>
 	<th class='yidongban'>移动版</th>
+</tr>
+
+<tr>
+	<td>SHU ???</td>
+	<td class="shu">蜀</td>
+	<th>许　靖</th>
+	<td>选贤拔才</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>誉虚</strong>——出牌阶段，你使用一张牌后，可以摸一张牌。若如此做，你使用下一张牌后，弃置一张牌。<br />
+		<strong>实荐</strong>——一名其他角色的出牌阶段，该角色在本阶段使用的第二张牌结算后，你可以弃置一张牌，令其获得“誉虚”直到回合结束。</td>
+	<th class='sp'>SP</th>
 </tr>
 
 <tr>
@@ -5598,5 +5609,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2019 | 最后更新 2019/12/27</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/01/01</footer>
 </body></html>
