--- a/index.html
+++ b/index.html
@@ -3268,6 +3268,21 @@
 </tr>
 
 <tr>
+	<td>SHU ???</td>
+	<td class="shu">蜀</td>
+	<th>花　鬘</th>
+	<td>芳踪载馨</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>蛮裔</strong>——锁定技，【南蛮入侵】对你无效。<br />
+		<strong>蛮嗣</strong>——当一名角色使用的【南蛮入侵】结算完毕后，你可以摸X张牌（X为此【南蛮入侵】造成伤害的角色数）。<br />
+		<strong>薮影</strong>——每个回合限一次，当你对一名男性角色造成伤害（或一名男性角色对你）造成伤害时，若此伤害是你对其（或其对你）造成的第二次伤害，你可以弃置一张手牌令此伤害+1（或-1）。<br />
+		<strong>战缘</strong>——觉醒技，准备阶段，若你已因“蛮嗣”累计获得超过七张牌，你加1点体力上限，并可以选择一名男性角色，你与其获得技能“系力”，然后你失去技能“蛮嗣”。<br />
+		<span class="getskill">系力</span>——你的回合外，当其他拥有【系力】技能的角色在其回合内使用【杀】指定目标后，你可以弃置一张手牌，令此【杀】伤害+1。</td>
+	<th class='xianding'>祈福</th>
+</tr>
+
+<tr>
 	<td rowspan="3">WU 001</td>
 	<th rowspan="3" class="wu zhugong">吴</th>
 	<th rowspan="3">孙　权</th>
@@ -5609,5 +5624,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/01/01</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/01/22</footer>
 </body></html>
