更新毌丘俭

--- a/index.html
+++ b/index.html
@@ -2105,9 +2105,9 @@
 	<td>镌功铭征荣</td>
 	<td>4</td>
 	<td class='jineng'>
-		<strong>征荣</strong>——当你对其他角色造成伤害后，若其手牌比你多，你可以将其一张牌置于你的武将牌上，称为“荣”。<br />
-		<strong>鸿举</strong>——觉醒技，准备阶段，若“荣”的数量大于等于3且场上有角色死亡，则你可以用任意张手牌替换等量的“荣”，然后扣减1点体力上限并获得技能“清侧”。<br />
-		<span class="getskill">清侧</span>——出牌阶段，你可以移去一张“荣”，然后弃置场上的一张牌。
+		<strong>征荣</strong>——当你使用【杀】或伤害类锦囊指定目标后，你可选择其中一名手牌数大于等于你的目标角色，其将一张牌置于你的武将牌上，称为“荣”。<br />
+		<strong>鸿举</strong>——觉醒技，准备阶段，若“荣”的数量大于等于3，则你可以用任意张手牌替换等量的“荣”，然后扣减1点体力上限并获得技能“清侧”。<br />
+		<span class="getskill">清侧</span>——出牌阶段，你可以获得一张“荣”并弃置一张手牌，然后弃置场上的一张牌。
 		</td>
 	<th class='lei'>神话再临·雷</th>
 </tr>
@@ -5624,5 +5624,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/01/22</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/02/21</footer>
 </body></html>
