辛宪英修改

--- a/index.html
+++ b/index.html
@@ -2052,8 +2052,8 @@
 	<td>名门智女</td>
 	<td>3</td>
 	<td class='jineng'>
-		<strong>忠鉴</strong>—— 出牌阶段限一次，你可以展示一张手牌，然后展示一名其他角色至多三张手牌。对比你与其展示的牌，每有一张牌花色相同，你摸一张牌；每有一张牌点数相同，你对其造成1点伤害；每有一张牌花色点数均不同，你弃置一张手牌。<br />
-		<strong>才识</strong>——摸牌阶段开始时，你可以选择一项：1.少摸一张牌，然后本回合“忠鉴”可多展示自己一张手牌；2.本回合手牌上限-1，然后本回合“忠鉴”可多展示目标一张牌；3.多摸两张牌，然后本回合不能发动“忠鉴”。</td>
+		<strong>忠鉴</strong>——出牌阶段限一次，你可以展示一张手牌，然后展示一名其他角色的X张手牌（X为其手牌数减体力值且至少为1）。若你展示牌与其展示牌中的任意牌：颜色相同，你摸一张牌或弃置其一张牌；点数相同，本回合此技能改为“限两次”；均不同，你的手牌上限-1。<br />
+		<strong>才识</strong>——摸牌阶段开始时，你可选择一项：1.你的手牌上限+1，然后本回合不能对其他角色使用牌；2.你回复1点体力，然后本回合不能对你使用牌。</td>
 	<th class="jiang">原创设计<sub>2017</sub></th>
 </tr>
 
