夏侯渊,诸葛亮,沙摩柯,袁谭袁尚

--- a/index.html
+++ b/index.html
@@ -1246,11 +1246,17 @@
 </tr>
 
 <tr>
-	<td rowspan="2">WEI 008</td>
-	<td rowspan="2" class="wei">魏</td>
-	<th rowspan="2">夏侯渊</th>
-	<td rowspan="2">疾行的猎豹</td>
-	<td rowspan="2">4</td>
+	<td rowspan="3">WEI 008</td>
+	<td rowspan="3" class="wei">魏</td>
+	<th rowspan="3">夏侯渊</th>
+	<td rowspan="3">疾行的猎豹</td>
+	<td rowspan="3">4</td>
+	<td class="jineng">
+		<strong>神速</strong>——你可以做出如下选择：1.跳过判定阶段和摸牌阶段；2.跳过出牌阶段并弃置一张装备牌；3.跳过弃牌阶段并翻面。你每选择一项，便视为你使用一张无距离限制的【杀】。<br />
+		<strong>设变</strong>——当你翻面时，你可以移动场上的一张装备牌。</td>
+	<th class="feng">神话再临·风</th>
+</tr>
+<tr>
 	<td class="jineng">
 		<strong>神速</strong>——你可以做出如下选择：1.跳过判定阶段和摸牌阶段；2.跳过出牌阶段并弃置一张装备牌；3.跳过弃牌阶段并翻面。你每选择一项，便视为你使用一张无距离限制的【杀】。</td>
 	<th class="feng">神话再临·风</th>
@@ -2471,19 +2477,33 @@
 </tr>
 
 <tr>
-	<td rowspan="2">SHU 011</td>
-	<td rowspan="2" class="shu">蜀</td>
-	<th rowspan="2">诸葛亮</th>
-	<td rowspan="2">卧龙</td>
-	<td rowspan="2">3</td>
-	<td class="jineng" rowspan="2">
+	<td rowspan="3">SHU 011</td>
+	<td rowspan="3" class="shu">蜀</td>
+	<th rowspan="3">诸葛亮</th>
+	<td rowspan="3">卧龙</td>
+	<td rowspan="3">3</td>
+	<td class="jineng">
+		珠联璧合：庞统<br />
+		<strong>八阵</strong>——锁定技，若你的装备区里没有防具牌，你视为装备着【八卦阵】。<br />
+		<strong>火计</strong>——你可以将一张红色牌当【火攻】使用。<br />
+		<strong>看破</strong>——你可以将一张黑色牌当【无懈可击】使用。<br />
+		<strong>藏拙</strong>——锁定技，弃牌阶段开始时，若你本回合未使用过锦囊牌，你的锦囊牌不计入手牌上限。</td>
+	<th class="huo">神话再临·火</th>
+</tr>
+<tr>
+	<td class="jineng">
 		珠联璧合：庞统<br />
 		<strong>八阵</strong>——锁定技，若你的装备区里没有防具牌，你视为装备着【八卦阵】。<br />
 		<strong>火计</strong>——你可以将一张红色手牌当【火攻】使用。<br />
 		<strong>看破</strong>——你可以将一张黑色手牌当【无懈可击】使用。</td>
-	<th class="huo">神话再临·火</th>
+	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
+	<td class="jineng">
+		珠联璧合：庞统<br />
+		<strong>八阵</strong>——锁定技，若你的装备区里没有防具牌，你视为装备着【八卦阵】。<br />
+		<strong>火计</strong>——你可以将一张红色手牌当【火攻】使用。<br />
+		<strong>看破</strong>——你可以将一张黑色手牌当【无懈可击】使用。</td>
 	<th class="guozhan">国战</th>
 </tr>
 
@@ -2652,14 +2672,17 @@
 </tr>
 	
 <tr>
-	<td>SHU 020</td>
-	<td class="shu">蜀</td>
-	<th>沙摩柯</th>
-	<td>五溪蛮王</td>
-	<td>4</td>
-	<td class="jineng">
+	<td rowspan="2">SHU 020</td>
+	<td rowspan="2" class="shu">蜀</td>
+	<th rowspan="2">沙摩柯</th>
+	<td rowspan="2">五溪蛮王</td>
+	<td rowspan="2">4</td>
+	<td rowspan="2" class="jineng">
 		<strong>蒺藜</strong>——当你于一回合内使用或打出第X张牌时，你可以摸X张牌（X为你的攻击范围）。</td>
-	<th class='xianding'>自走棋</th>
+	<th class='xianding'>SP</th>
+</tr>
+<tr>
+	<th class='guozhan'>国战</th>
 </tr>
 
 <tr>
@@ -5403,7 +5426,7 @@
 	<td></td>
 	<td>4</td>
 	<td class='jineng'>
-		<strong>内伐</strong>——出牌阶段开始时，你可以摸一张牌，然后弃置一张牌。若弃置的牌是基本牌，本回合你不能使用锦囊和装备牌，且【杀】的使用次数+X且目标+1；若弃置的不是基本牌，本回合你不能使用基本牌，且普通锦囊牌的目标+1，前两次使用装备牌时摸X张牌（X为发动内伐时手牌中不能使用的牌且最多为5） </td>
+		<strong>内伐</strong>——出牌阶段开始时，你可以摸两张牌或获得场上的一张牌，然后弃置一张牌。若弃置的牌是基本牌，本回合你不能使用锦囊牌和装备牌且【杀】的使用次数+X且目标+1；若弃置的牌不是基本牌，本回合你不能使用基本牌，使用的普通锦囊牌的目标+1或-1，本回合前两次使用装备牌时摸X张牌。（X为发动内伐时手牌中不能使用的牌且最多为5）</td>
 	<th class='daiding'>待定</th>
 </tr>
 
