更新了一个界限技能

--- a/index.html
+++ b/index.html
@@ -1484,7 +1484,7 @@
 <tr>
 	<td class='jineng'>
 		珠联璧合：荀彧<br />
-		<strong>奇策</strong>——出牌阶段限一次，你可以将所有手牌当任意一张普通锦囊牌使用，以此法使用的目标数不能超过你的手牌数。结算完成后，你可以变更副将。<br />
+		<strong>奇策</strong>——出牌阶段限一次，你可以将所有手牌当任意一张普通锦囊牌使用，你不能以此法使用目标数超过X的牌（X为你的手牌数），然后你可以变更一次副将。<br />
 		<strong>智愚</strong>——当你受到伤害后，你可以摸一张牌，然后展示所有手牌，若颜色均相同，伤害来源弃置一张手牌。</td>
 	<th class='bian'>变</th>
 </tr>
@@ -1854,7 +1854,7 @@
 	<td>汉寿亭侯</td>
 	<td>4</td>
 	<td class='jineng'>
-		<strong>武圣</strong>——你可以将一张红色牌当【杀】使用或打出。<br />
+		<strong>武圣</strong>——你可以将一张红色牌当【杀】使用或打出；你使用的方块【杀】不受攻击范围限制。<br />
 		<strong>单骑</strong>——觉醒技，准备阶段，若你的手牌数大于体力值且本局游戏的主公不是刘备，你减1点体力上限，然后获得“马术”和“怒斩”。<br />
 	<span class='getskill'>马术</span>——锁定技，你计算与其他角色的距离-1。<br />
 	<span class='getskill'>怒斩</span>——锁定技，你使用锦囊牌转化的【杀】无次数限制；你使用装备牌转化的【杀】造成的伤害+1。</td>
@@ -2138,7 +2138,7 @@
 	<td>4</td>
 	<td class='jineng'>
 		<strong>凌人</strong>——出牌阶段限一次，当你使用【杀】或伤害类锦囊牌指定目标后，你可以猜测其中一个目标的手牌是否有基本牌、锦囊牌或装备牌。至少猜对一项则此牌对其伤害+1；至少猜对两项则你摸两张牌；猜对三项则你获得“奸雄”和“行殇”直到你下回合开始。<br />
-		<span class="getskill">奸雄</span>——当你受到伤害后，你可以选择一项：1.摸一张牌；2.获得造成此伤害的牌。<br />
+		<span class="getskill">奸雄</span>——当你受到伤害时，你可以摸一张牌，并且获得造成此伤害的牌。<br />
 		<span class="getskill">行殇</span>——当其他角色死亡时，你可以获得其所有牌。<br />
 		<strong>伏间</strong>——锁定技，结束阶段，你随机观看一名其他角色的X张手牌（X为全场手牌数最少的角色手牌数）。
 		</td>
@@ -2330,7 +2330,7 @@
 </tr>
 <tr>
 	<td class="jineng">
-		<strong>观星</strong>——准备阶段，你可以观看牌堆顶的五张牌（存活人数小于四时改为三张），然后以任意顺序放回牌堆顶或牌堆底。若你将这些牌均放至牌堆底，则结束结束你可以再进行一次“观星”。<br />
+		<strong>观星</strong>——准备阶段，你可以观看牌堆顶的五张牌（存活人数小于4时改为三张），然后以任意顺序放回牌堆顶或牌堆底。若你将这些牌均放至牌堆底，则结束阶段你可以再进行一次“观星”。<br />
 		<strong>空城</strong>——锁定技，若你没有手牌，你不能成为【杀】或【决斗】的目标。</td>
 	<th class="jiexiantupo">界限突破</th>
 </tr>
@@ -2387,7 +2387,7 @@
 	<td class="jineng">
 		珠联璧合：马岱<br />
 		<strong>马术</strong>——出牌阶段，你可以明置此武将牌；你计算与其他角色的距离-1。<br />
-		<strong>铁骑</strong>——当你使用【杀】指定一个目标后，你可以进行判定，然后令其本回合一张明置的武将牌的所有非锁定技失效，除非该角色弃置与结果花色相同的一张牌，否则不能使用【闪】。</td>
+		<strong>铁骑</strong>——当你使用【杀】指定一个目标后，你可以进行判定。然后你选择其一张明置的武将牌，令此武将牌上的所有非锁定技于此回合内失效。最后除非该角色弃置与结果花色相同的一张牌，否则不能使用【闪】。</td>
 	<th class="guozhan">国战</th>
 </tr>
 
@@ -2429,7 +2429,7 @@
 <tr>
 	<td class="jineng">
 		珠联璧合：魏延<br />
-		<strong>烈弓</strong>——当你于出牌阶段内使用【杀】指定一名角色为目标后，若该角色的手牌数不小于你的体力值或不大于你的攻击范围，你可以令其不能使用【闪】响应此【杀】。</td>
+		<strong>烈弓</strong>——当你于出牌阶段内使用【杀】指定一个目标后，若该角色的手牌数不小于你的体力值或不大于你的攻击范围，则你可以令其不能使用【闪】响应此【杀】。</td>
 	<th class="guozhan">国战</th>
 </tr>
 
@@ -2447,7 +2447,7 @@
 <tr>
 	<td class="jineng">
 		珠联璧合：黄忠<br />
-		<strong>狂骨</strong>——当你对距离1以内的一名角色造成1点伤害后，你可以回复1点体力或摸一张牌。</td>
+		<strong>狂骨</strong>——锁定技，当你对距离1以内的一名角色造成1点伤害后，你回复1点体力。</td>
 	<th class="guozhan">国战</th>
 </tr>
 
@@ -2464,9 +2464,12 @@
 </tr>
 <tr>
 	<td class="jineng">
-		<strong>连环</strong>——你可以将梅花牌当【铁索连环】使用或重铸；你使用【铁索连环】选择目标的个数上限+1。<br />
-		<strong>涅槃</strong>——限定技，出牌阶段或当你处于濒死状态时，你可以弃置你区域里的所有牌，复原武将牌，摸三张牌，将体力回复至3点。</td>
-	<th class="huo">神话再临·火<sub>新</sub></th>
+		<strong>连环</strong>——你可以将一张梅花牌当【铁索连环】使用或重铸；你使用【铁索连环】可以额外选择一名目标。<br />
+		<strong>涅槃</strong>——限定技，当你处于濒死状态时，你可以弃置所有牌，然后复原你的武将牌，摸三张牌，将体力回复至3点。然后你从“八阵”、“火计”、“看破”中选择一个技能获得。<br />
+		<span class="getskill">八阵</span>——锁定技，若你的装备区里没有防具牌，你视为装备着【八卦阵】。<br />
+		<span class="getskill">火计</span>——你可以将一张红色牌当【火攻】使用。<br />
+		<span class="getskill">看破</span>——你可以将一张黑色牌当【无懈可击】使用。</td>
+	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
 	<td class="jineng">
@@ -2516,7 +2519,7 @@
 	<td class="jineng">
 		<strong>挑衅</strong>——出牌阶段限一次，你可以选择一名攻击范围内含有你的角色，然后除非该角色对你使用一张【杀】，否则你弃置其一张牌。<br />
 		<strong>志继</strong>——觉醒技，准备阶段，若你没有手牌，你回复1点体力或摸两张牌，然后减1点体力上限，获得“观星”。<br />
-		<span class="getskill">观星</span>——准备阶段开始时，你可以观看牌堆顶的X张牌（X为全场角色的数量且至多为5）并调整这些牌的顺序，然后将其中任意数量的牌置于牌堆底。</td>
+		<span class="getskill">观星</span>——准备阶段，你可以观看牌堆顶的五张牌（存活人数小于4时改为三张），然后以任意顺序放回牌堆顶或牌堆底。若你将这些牌均放至牌堆底，则结束阶段你可以再进行一次“观星”。</td>
 	<th class="shan">神话再临·山</th>
 </tr>
 <tr>
@@ -2751,7 +2754,13 @@
 	<td class='jineng'>
 		珠联璧合：刘备<br />
 		<strong>眩惑</strong>——与你势力相同的其他角色的出牌阶段限一次，该角色可以交给你两张牌，然后其本回合获得以下技能之一：“武圣”、“咆哮”、“龙胆”、“铁骑”、“烈弓”、“狂骨”。<br />
-		<strong>恩怨</strong>——锁定技，当你获得一名其他角色的两张或更多的牌时，你可以令其摸一张牌；当你受到1点伤害后，该角色需交给你一张手牌，否则失去1点体力。</td>
+		<strong>恩怨</strong>——锁定技，当你获得一名其他角色的两张或更多的牌时，你可以令其摸一张牌；当你受到1点伤害后，该角色需交给你一张手牌，否则失去1点体力。<br />
+		<span class="getskill">武圣</span>——你可以将一张红色牌当【杀】使用或打出。<br />
+		<span class="getskill">咆哮</span>——锁定技，你使用【杀】无次数限制；你在一回合内使用第二张【杀】时，摸一张牌。<br />
+		<span class="getskill">龙胆</span>——你可以将【杀】当【闪】、【闪】当【杀】使用或打出。当你通过发动【龙胆】使用的【杀】被一名角色使用的【闪】抵消时，你可以对另一名角色造成1点伤害。当一名角色使用的【杀】被你通过发动【龙胆】使用的【闪】抵消时，你可以令另一名其他角色回复1点体力。<br />
+		<span class="getskill">铁骑</span>——当你使用【杀】指定一个目标后，你可以进行判定。然后你选择其一张明置的武将牌，令此武将牌上的所有非锁定技于此回合内失效。最后除非该角色弃置与结果花色相同的一张牌，否则不能使用【闪】。<br />
+		<span class="getskill">烈弓</span>——当你于出牌阶段内使用【杀】指定一个目标后，若该角色的手牌数不小于你的体力值或不大于你的攻击范围，则你可以令其不能使用【闪】响应此【杀】。<br />
+		<span class="getskill">狂骨</span>——锁定技，当你对距离1以内的一名角色造成1点伤害后，你回复1点体力。</td>
 	<th class='quan'>权</th>
 </tr>
 
@@ -2773,7 +2782,7 @@
 	<td>4</td>
 	<td class='jineng'>
 		<strong>父魂</strong>—你可以将两张手牌当【杀】使用或打出；当你于出牌阶段以此法造成伤害后，本回合获得“武圣”和“咆哮”。<br />
-		<span class="getskill">武圣</span>——你可以将一张红色牌当【杀】使用或打出。<br />
+		<span class="getskill">武圣</span>——你可以将一张红色牌当【杀】使用或打出；你使用的方块【杀】不受攻击范围限制。<br />
 		<span class="getskill">咆哮</span>——锁定技，你使用【杀】无次数限制。</td>
 	<th class="jiang">一将成名<sub>2012</sub></th>
 </tr>
@@ -2903,7 +2912,7 @@
 	<td>通壮逾古</td>
 	<td>4</td>
 	<td class='jineng'>
-		<strong>怃戎</strong>——出牌阶段限一次，你可以和一名其他角色同时展示一张手牌：若你展示的是【杀】且该角色不是【闪】，你弃置此【杀】，然后对其造成1点伤害；若你展示的不是【杀】且该角色是【闪】，你弃置此牌，然后获得其一张牌。<br />
+		<strong>怃戎</strong>——出牌阶段限一次，你可以和一名其他角色同时展示一张手牌：若你展示的是【杀】且该角色不是【闪】，你对其造成1点伤害；若你展示的不是【杀】且该角色是【闪】，你获得其一张牌。 <br />
 		<strong>矢志</strong>——锁定技，若你的体力值为1，你的【闪】视为【杀】。</td>
 	<th class="jiang">一将成名<sub>2015</sub></th>
 </tr>
@@ -3016,10 +3025,10 @@
 	<td>4</td>
 	<td class='jineng'>
 		<strong>征南</strong>——当其他角色死亡后，你可以选择一项：摸三张牌；获得下列技能中的一个：“武圣”、“当先”和“制蛮”。<br />
-		<span class="getskill">武圣</span>——你可以将一张红色牌当【杀】使用或打出。<br />
+		<strong>撷芳</strong>——锁定技，你计算与其他角色的距离-X（X为全场女性角色数）。<br />
+		<span class="getskill">武圣</span>——你可以将一张红色牌当【杀】使用或打出；你使用的方块【杀】不受攻击范围限制。<br />
 		<span class="getskill">当先</span>——锁定技，回合开始时，你执行一个额外的出牌阶段。<br />
-		<span class="getskill">制蛮</span>——当你对其他角色造成伤害时，你可以防止此伤害，然后你获得其装备区或判定区里的一张牌。<br />
-		<strong>撷芳</strong>——锁定技，你计算与其他角色的距离-X（X为全场女性角色数）。</td>
+		<span class="getskill">制蛮</span>——当你对其他角色造成伤害时，你可以防止此伤害，然后你获得其装备区或判定区里的一张牌。</td>
 	<th class='xianding'>祈福</th>
 </tr>
 
@@ -3042,9 +3051,9 @@
 	<td>惊鸿魅影</td>
 	<td>4</td>
 	<td class='jineng'>
-		<strong>芳魂</strong>——当你使用【杀】造成伤害或受到【杀】造成的伤害后，你获得1个“梅影”标记；你可以移去1个“梅影”标记来发动“龙胆”并摸一张牌。<br />
-		<span class="getskill">龙胆</span>——你可以将一张【杀】当【闪】、【闪】当【杀】使用或打出。<br />
-		<strong>扶汉</strong>——限定技，回合开始时，你可以移去所有“梅影”标记并摸等量的牌，然后从五张蜀势力武将牌中选择一名替换，并将体力上限数调整为移去所有“梅影”标记的数量。若你是体力值最低的角色，你回复1点体力。</td>
+		<strong>芳魂</strong>——当你使用【杀】造成伤害，或受到【杀】造成的伤害后，你获得X个“梅影”标记（X为本次造成或受到伤害的值）；你可以移去1个“梅影”标记来发动“龙胆”并摸一张牌。<br />
+		<strong>扶汉</strong>——限定技，回合开始时，你可以移去所有"梅影"标记，然后从五张蜀势力武将牌中选择一名替换，并将体力上限数调整为本局游戏移去所有"梅影"标记的数量（最少2，最多8），回复1点体力。<br />
+		<span class="getskill">龙胆</span>——你可以将一张【杀】当【闪】、【闪】当【杀】使用或打出。</td>
 	<th class='xianding'>祈福</th>
 
 <tr>
@@ -3248,8 +3257,9 @@
 <tr>
 	<td class='jineng'>
 		<strong>姝勇</strong>——当你使用或打出【杀】时，你可以获得一名其他角色的一张牌，然后其摸一张牌。<br />
-		<strong>许身</strong>——限定技，出牌阶段，你可以失去X点体力（X为场上男性角色的数量）。若你以此法进入了濒死状态，则当你因一名角色而脱离此濒死状态后，你可以令其获得技能〖武圣〗和〖当先〗。<br />
-		<span class="getskill">镇南</span>——当你成为其他角色使用的牌的目标后，若此牌的目标数大于该角色的体力值，则你可以弃置一张牌并对其造成1点伤害。</td>
+		<strong>许身</strong>——限定技，出牌阶段，你可以失去X点体力（X为场上男性角色的数量）。若你以此法进入了濒死状态，则当你因一名角色而脱离此濒死状态后，你可以令其获得技能“武圣”和“当先”。<br />
+		<span class="getskill">武圣</span>——你可以将一张红色牌当【杀】使用或打出；你使用的方块【杀】不受攻击范围限制。<br />
+		<span class="getskill">当先</span>——锁定技，回合开始时，你执行一个额外的出牌阶段。</td>
 	<th class='yidongban'>移动版</th>
 </tr>
 
@@ -3532,7 +3542,7 @@
 	<td class="jineng">
 		<strong>激昂</strong>——当你使用【决斗】或红色【杀】指定目标后，或成为【决斗】或红色【杀】的目标后，你可以摸一张牌。<br />
 		<strong>魂姿</strong>——觉醒技，准备阶段，若你的体力值为1，你减1点体力上限，然后获得“英姿”和“英魂”。<br />
-		<span class="getskill">英姿</span>——锁定技，摸牌阶段，你多摸一张牌；你的手牌上限等于你的体力上限。<br />
+		<span class="getskill">英姿</span>——锁定技，摸牌阶段，你多摸一张牌；你的手牌上限等于X（X为你的体力上限）。<br />
 		<span class="getskill">英魂</span>——准备阶段，若你已受伤，你可以选择一名其他角色并选择一项：1.令其摸X张牌，然后弃置一张牌；2.令其摸一张牌，然后弃置X张牌（X为你已损失的体力值）。<br />
 		<strong>制霸</strong>——主公技，其他吴势力角色的出牌阶段限一次，该角色可以与你拼点（“魂姿”发动后你可拒绝此拼点）。若其没赢，你可以获得拼点的两张牌。 </td>
 	<th class="shan">神话再临·山</th>
@@ -3698,8 +3708,8 @@
 	<td class='jineng'>
 		<strong>谦节</strong>——锁定技，你不能被横置，且不能成为延时类锦囊牌或其他角色拼点的目标。<br />
 		<strong>决堰</strong>——出牌阶段限一次，你可以废除你装备区里的一个装备栏，然后执行对应的一项：武器栏，本回合你可以多使用三张【杀】；防具栏，摸三张牌，本回合手牌上限+3；2个坐骑栏，本回合你使用牌无距离限制；宝物栏，本回合获得技能“集智”。<br />
-		<span class="getskill">集智</span>——当你使用普通锦囊牌时，你可以摸一张牌。<br />
 		<strong>破势</strong>——觉醒技，准备阶段开始时，若你的装备栏均被废除或体力值为1，则你扣减1点体力上限，然后将手牌补至体力上限，失去技能“决堰”并获得技能“怀柔”。<br />
+		<span class="getskill">集智</span>——当你使用一张锦囊牌时，你可以摸一张牌。若此牌是基本牌，你可以弃置此牌然后本回合手牌上限+1。<br />
 		<span class="getskill">怀柔</span>——出牌阶段，你可以重铸装备牌。</td>
 	<th class='lei'>神话再临·雷</th>
 </tr>	
@@ -4075,7 +4085,7 @@
 	<td class='jineng'>
 		<strong>绮胄</strong>——锁定技，你根据装备区里牌的花色数获得以下技能：1种或以上-马术；2种或以上-英姿；3种或以上-短兵；4种-奋威。<br />
 		<span class="getskill">马术</span>——锁定技，你计算与其他角色的距离-1。<br />
-		<span class="getskill">英姿</span>——摸牌阶段，你可以多摸一张牌。<br />
+		<span class="getskill">英姿</span>——锁定技，摸牌阶段，你多摸一张牌；你的手牌上限等于X（X为你的体力上限）。<br />
 		<span class="getskill">短兵</span>——你使用【杀】可以多选择一名距离为1的角色为目标。<br />
 		<span class="getskill">奋威</span>——限定技，当一张锦囊牌指定两个或更多目标后，你可令此牌对其中任意名目标角色无效。<br />
 		<strong>闪袭</strong>——出牌阶段限一次，你可以弃置一张红色基本牌，然后弃置攻击范围内的一名角色的一张牌，若弃置的牌是【闪】，你观看其手牌，若弃置的不是【闪】，其观看你的手牌。</td>
@@ -4151,7 +4161,7 @@
 	<td class='jineng'>
 		<strong>炼化</strong>——你的回合外，每当有其他角色受到伤害后，你获得一个“丹血”标记（该角色与你阵营一致为红色，不一致为黑色，此颜色对玩家不可见）直到你的准备阶段开始。准备阶段，根据你获得的“丹血”标记的数量和颜色，你获得相应的游戏牌以及获得相应技能直到回合结束。3枚或以下：“英姿”和【桃】；超过3枚且红色“丹血”较多：“观星”和【无中生有】；超过3枚且黑色“丹血”较多：“直言”和【顺手牵羊】；超过3枚且红色和黑色一样多：【杀】、【决斗】和“攻心”。<br/>
 		<strong>札符</strong>——限定技，出牌阶段，你可以选择一名其他角色。该角色的下一个弃牌阶段开始时，其选择保留一张手牌，然后将其余的手牌交给你。<br/>
-		<span class="getskill">英姿</span>——锁定技，摸牌阶段，你多摸一张牌；你的手牌上限与你的体力上限相同。<br />
+		<span class="getskill">英姿</span>——锁定技，摸牌阶段，你多摸一张牌；你的手牌上限等于X（X为你的体力上限）。<br />
 		<span class="getskill">观星</span>——准备阶段开始时，你可以观看牌堆顶的X张牌（X为全场角色的数量且至多为5），然后以任意顺序放回牌堆顶或牌堆底。<br />
 		<span class="getskill">攻心</span>——出牌阶段限一次，你可以观看一名其他角色的手牌，然后你可以展示其中一张红桃牌，选择一项：1.弃置此牌；2.将此牌置于牌堆顶。<br />
 		<span class="getskill">直言</span>——结束阶段开始时，你可以令一名角色先摸一张牌再展示之，然后若此牌为装备牌：该角色回复1点体力，使用之。</td>
@@ -4366,7 +4376,7 @@
 	<td>驭魂千机</td>
 	<td class='jineng'>
 		<strong>离魂</strong>——出牌阶段限一次，你可以弃置一张牌并指定一名男性角色，将你的武将牌翻面并获得其所有手牌，若如此做，出牌阶段结束时，你交给其X张牌，X为其当前的体力值。<br />
-		<strong>闭月</strong>——结束阶段开始时，你可以摸一张牌。</td>
+		<strong>闭月</strong>——结束阶段，你可以摸一张牌。若你没有手牌，则改为摸两张牌。</td>
 	<th class='sp'>SP</th>
 
 <tr>
@@ -4671,15 +4681,15 @@
 	<td>斜倚凤榻</td>
 	<td rowspan="2">3</td>
 	<td class='jineng'>
-		<strong>鸩毒</strong>——其他角色的出牌阶段开始时，你可以弃置一张手牌，然后该角色视为使用一张【酒】，且你对其造成1点伤害。<br />
-		<strong>戚乱</strong>——一名角色的回合结束后，你可以摸3X张牌（X为你于此回合内杀死过的角色数）。</td>
+		<strong>鸩毒</strong>——一名角色的出牌阶段开始时，你可以弃置一张手牌，然后该角色视为使用一张【酒】，若该角色不是你，你对其造成1点伤害。<br />
+		<strong>戚乱</strong>——一名角色的回合结束后，你可以摸3X+Y张牌（X为你于此回合内杀死过的角色数，Y为其他死亡的角色数）。</td>
 	<th class='sp'>SP</th>
 </tr>
 <tr>
 	<td>弄权之蛇蝎</td>
 	<td class="jineng">
 		<strong>鸩毒</strong>——其他角色的出牌阶段开始时，你可以弃置一张手牌，然后该角色视为使用一张【酒】，且你对其造成1点伤害。<br />
-		<strong>戚乱</strong>——当你杀死一名角色后，你可于此回合结束后摸三张牌。</td>
+		<strong>戚乱</strong>——一名角色的回合结束后，你可以摸3X+Y张牌（X为你于此回合内杀死过的角色数，Y为其他死亡的角色数）。</td>
 	<th class="zhen">阵</th>
 </tr>
 
@@ -4824,7 +4834,7 @@
 	<td>攻无不克</td>
 	<td>4</td>
 	<td class='jineng'>
-		<strong>陷阵</strong>——出牌阶段限一次，你可以与一名角色拼点：若你赢，本回合你无视该角色的防具、对其使用牌没有距离和次数限制，且你使用普通锦囊牌或【杀】仅指定单一目标后，可额外指定该角色为目标；若你没赢，本回合你不能使用【杀】且你的【杀】不计入手牌上限。<br />
+		<strong>陷阵</strong>——出牌阶段限一次，你可以与一名角色拼点：若你赢，此阶段你无视该角色的防具、对其使用牌没有距离和次数限制，且你使用普通锦囊牌或【杀】仅指定单一目标后，可额外指定该角色为目标；若你没赢，此阶段你不能使用【杀】且你的【杀】不计入手牌上限。<br />
 		<strong>禁酒</strong>——锁定技，你的【酒】视为【杀】。</td>
 	<th class="jiang">一将成名<sub>2011</sub></th>
 </tr>
@@ -5028,7 +5038,7 @@
 	<td class='jineng'>
 		<strong>机巧</strong>——出牌阶段开始时，你可以弃置任意张装备牌，然后你亮出牌堆顶两倍数量的牌，获得其中的锦囊牌。<br />
 		<strong>玲珑</strong>——锁定技，若你的装备区里没有防具牌，你视为装备着【八卦阵】；若你的装备区里没有坐骑牌，你的手牌上限+1；若你的装备区里没有宝物牌，你视为拥有“奇才”。<br />
-		<span class="getskill">奇才</span>——锁定技，你使用锦囊牌无距离限制；锁定技，其他角色不能弃置你装备区里不为坐骑牌的牌。</td>
+		<span class="getskill">奇才</span>——锁定技，你使用锦囊牌无距离限制；其他角色不能弃置你装备区里的防具和宝物牌。</td>
 	<th class='xinghuo'>星火燎原·天同</th>
 </tr>
 
@@ -5431,6 +5441,31 @@
 </tr>
 
 <tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>陈　登</th>
+	<td>雄气壮节</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>周旋</strong>——结束阶段，你可以弃置一张牌并选择一名其他角色，然后选择一种非基本牌类别或基本牌名（对其他角色不可见）。该角色使用下一张牌时，若与你选择相同，你观看牌堆顶的三张牌并将这些牌交给任意角色。<br />
+		<strong>丰积</strong>——锁定技，回合开始时，若你的手牌数不小于上回合结束时的手牌数，你摸两张牌且本回合手牌上限为你的体力上限。</td>
+	<th class='yidongban'>移动版</th>
+</tr>
+
+<tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>杨　彪</th>
+	<td>德彰海内</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>昭汉</strong>——锁定技，前四个准备阶段，你加1点体力上限并回复1点体力；之后三个准备阶段，你减1点体力上限。<br />
+		<strong>让节</strong>——当你受到1点伤害后，你可以选择一项并摸一张牌：1.移动场上一张牌；2.随机获得牌堆中你选择的一种类别的牌。<br />
+		<strong>义争</strong>——出牌阶段限一次，你可以与一名体力值不大于你的角色拼点。若你赢，其跳过下个摸牌阶段；若你没赢，你减1点体力上限。</td>
+	<th class='yidongban'>移动版</th>
+</tr>
+
+<tr>
 	<td>LE 001</td>
 	<td class='shen'>神</td>
 	<th>关　羽</th>
@@ -5530,8 +5565,8 @@
 		<span class="getskill">极略</span>——你可以弃置1枚“忍”标记，发动下列一项技能：“鬼才”、“放逐”、“集智”、“制衡”或“完杀”。<br />
 		<span class="getskill">鬼才</span>——当一名角色的判定牌生效前，你可以打出一张牌代替之。<br />
 		<span class="getskill">放逐</span>——当你受到伤害后，你可以令一名其他角色翻面，然后该角色摸X张牌（X为你已损失的体力值）。<br />
-		<span class="getskill">集智</span>——当你使用普通锦囊牌时，你可以摸一张牌。<br />
-		<span class="getskill">制衡</span>——出牌阶段限一次，你可以弃置任意张牌，然后摸等量的牌。<br />
+		<span class="getskill">集智</span>——当你使用一张锦囊牌时，你可以摸一张牌。若此牌是基本牌，你可以弃置此牌然后本回合手牌上限+1。<br />
+		<span class="getskill">制衡</span>——出牌阶段限一次，你可以弃置任意张牌，然后摸等量的牌。若你以此法弃置了所有的手牌，则额外摸一张牌。<br />
 		<span class="getskill">完杀</span>——锁定技，你的回合内，只有你和处于濒死状态的角色才能使用【桃】。<br />
 		<strong>连破</strong>——当你杀死一名角色后，你可于此回合结束后获得一个额外回合。</td>
 	<th class="shan">神话再临·山</th>
@@ -5665,5 +5700,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/02/26</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/04/28</footer>
 </body></html>
