界小乔/界魏延/王双/潘凤

--- a/index.html
+++ b/index.html
@@ -2247,6 +2247,17 @@
 </tr>
 
 <tr>
+	<td>WEI ???</td>
+	<td class="wei">魏</td>
+	<th>王　双</th>
+	<td>遏北的悍锋 </td>
+	<td>8</td>
+	<td class='jineng'>
+		<strong>持节</strong>——锁定技，你的【杀】无距离限制；当你使用【杀】指定攻击范围外的角色为目标后，此【杀】不计次数且你进行判定：若结果为武器或坐骑牌，此【杀】伤害值增加至其体力值；若为其他结果，你失去1点体力。</td>
+	<th class='xianding'>祈福</th>
+</tr>
+
+<tr>
 	<td rowspan="3">SHU 001</td>
 	<th rowspan="3" class="shu zhugong">蜀</th>
 	<th rowspan="3">刘　备</th>
@@ -2441,8 +2452,8 @@
 	<td rowspan="2">4</td>
 	<td class="jineng">
 		<strong>狂骨</strong>——当你对距离1以内的一名角色造成1点伤害后，你可以回复1点体力或摸一张牌。<br />
-		<strong>奇谋</strong>——限定技，出牌阶段，你可以失去任意点体力，然后直到回合结束，你计算与其他角色的距离-X，且你可以多使用X张【杀】（X为你失去的体力值）。</td>
-	<th class="feng">神话再临·风</th>
+		<strong>奇谋</strong>——限定技，出牌阶段，你可以失去任意点体力，摸X张牌，然后直到回合结束，你计算与其他角色的距离-X，且你可以多使用X张【杀】（X为你失去的体力值）。</td>
+	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
 	<td class="jineng">
@@ -3575,8 +3586,8 @@
 	<td rowspan="2">3</td>
 	<td class="jineng">
 		<strong>天香</strong>——当你受到伤害时，你可以弃置一张红桃手牌,防止此次伤害并选择一名其他角色，你选择一项：令其受到1点伤害，然后摸X张牌（X为其已损失体力值且至多为5）；令其失去1点体力，然后其获得你弃置的牌。<br />
-		<strong>红颜</strong>——锁定技，你的黑桃牌视为红桃牌。</td>
-	<th class="feng">神话再临·风</th>
+		<strong>红颜</strong>——锁定技，你的黑桃牌视为红桃牌。当你于回合外失去红桃牌时，你摸一张牌。</td>
+	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
 	<td class="jineng">
@@ -4635,11 +4646,13 @@
 	<th rowspan="2">潘　凤</th>
 	<td rowspan="2">嗜血狂斧</td>
 	<td rowspan="2">4</td>
-	<td rowspan="2" class="jineng">
-		<strong>狂斧</strong>——当你使用【杀】对目标角色造成伤害后，你可以选择一项：1.将其装备区里的一张牌置入你的装备区；2.弃置其装备区里的一张牌。</td>
+	<td class="jineng">
+		<strong>狂斧</strong>——出牌阶段限一次，你可以弃置场上一张装备牌，然后视为使用一张【杀】（不计次数，无视距离）。若弃置的不是你的牌且【杀】没有造成伤害，你弃置两张手牌；若弃置的是你的牌且【杀】造成了伤害，你摸两张牌。</td>
 	<th class='sp'>SP</th>
 </tr>
 <tr>
+	<td class="jineng">
+	<strong>狂斧</strong>——当你使用【杀】对目标角色造成伤害后，你可以选择一项：1.将其装备区里的一张牌置入你的装备区；2.弃置其装备区里的一张牌。</td>
 	<th class="guozhan">国战</th>
 </tr>
 
@@ -5700,5 +5713,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/04/28</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/05/14</footer>
 </body></html>
