--- a/index.html
+++ b/index.html
@@ -2827,7 +2827,7 @@
 <tr>
 	<td class='jineng'>
 		珠联璧合：刘备<br />
-		<strong>眩惑</strong>——与你势力相同的其他角色的出牌阶段限一次，该角色可以交给你两张牌，然后其本回合获得以下技能之一：“武圣”、“咆哮”、“龙胆”、“铁骑”、“烈弓”、“狂骨”。<br />
+		<strong>眩惑</strong>——与你势力相同的其他角色的出牌阶段限一次，该角色可以交给你一张手牌并弃置一张牌，然后其选择并获得以下技能之一直到回合结束：“武圣”、“咆哮”、“龙胆”、“铁骑”、“烈弓”、“狂骨”（场上已有的技能无法选择）。<br />
 		<strong>恩怨</strong>——锁定技，当你获得一名其他角色的两张或更多的牌时，你可以令其摸一张牌；当你受到1点伤害后，该角色需交给你一张手牌，否则失去1点体力。<br />
 		<span class="getskill">武圣</span>——你可以将一张红色牌当【杀】使用或打出。<br />
 		<span class="getskill">咆哮</span>——锁定技，你使用【杀】无次数限制；你在一回合内使用第二张【杀】时，摸一张牌。<br />
@@ -3602,7 +3602,7 @@
 <tr>
 	<td class="jineng">
 		<strong>英魂</strong>——准备阶段，若你已受伤，你可以选择一名其他角色并选择一项：1.令其摸X张牌，然后弃置一张牌；2.令其摸一张牌，然后弃置X张牌（X为你已损失的体力值）。<br/>
-		<strong>破虏</strong>——当你杀死一名角色或死亡后，你可以令任意名角色各摸X张牌（X为本技能发动次数且包含本次）。</td>
+		<strong>武烈</strong>——限定技，结束阶段，你可以失去任意点体力，令等同于失去体力值数量的其他角色获得"烈"标记；拥有"烈"标记的玩家受到一次伤害时，弃置此标记并防止该伤害。</td>
 	<th class="jiexiantupo">界限突破</th>
 </tr>
 <tr>
@@ -3860,7 +3860,7 @@
 	<td>3</td>
 	<td class='jineng'>
 		<strong>调度</strong>——与你势力相同的角色使用装备牌时可以摸一张牌。出牌阶段开始时，你可以获得与你势力相同的一名角色装备区里的一张牌，然后可以将此牌交给另一名角色。<br />
-		<strong>典财</strong>——其他角色的出牌阶段结束时，若你于此阶段失去了X张或更多的牌，则你可以将手牌摸至体力上限，然后你可以变更副将（X为你的体力值）。</td>
+		<strong>典财</strong>——其他角色的出牌阶段结束时，若你于此阶段失去了X张或更多的牌，则你可以将手牌摸至体力上限，然后你可以变更一次副将（X为你的体力值）。</td>
 	<th class='bian'>变</th>
 </tr>
 
@@ -4783,7 +4783,7 @@
 	<td>飞扬跋扈</td>
 	<td rowspan="2">6</td>
 	<td class="jineng">
-		<strong>耀武</strong>——锁定技，当你受到【杀】造成的伤害时，若此【杀】为红色，伤害来源回复1点体力或摸一张牌；若此【杀】不为红色，则你摸一张牌。</td>
+		<strong>耀武</strong>——锁定技，当你受到伤害时，若造成伤害的牌为红色，伤害来源摸一张牌；若此牌不为红色，你摸一张牌。</td>
 	<th class="jiexiantupo">界限突破</th>
 </tr>
 
@@ -5248,9 +5248,9 @@
 	<td rowspan="2">忠魂不泯</td>
 	<td rowspan="2">4</td>
 	<td class='jineng'>
-		<strong>连计</strong>——出牌阶段限一次，你可以交给一名其他角色一张【杀】或黑色锦囊牌，且令其使用牌堆中的一张武器牌。然后该角色选择一项：对其他角色使用这张牌，并将武器牌交给其中一个目标；2.视为你对其使用这张牌，并将武器牌交给你。<br />
-		<strong>谋逞</strong>——觉醒技，当其他角色使用因“连计”交给其的牌累计造成3点伤害后，你失去“连计”，然后获得“矜功”。<br />
-		<span class="getskill">矜功</span>——出牌阶段限一次，你可以将一张装备牌或【杀】当一张锦囊牌使用（三选一），然后直到本回合的结束阶段，若你没有造成过伤害，你失去1点体力。（含专属锦囊——【美人计】：出牌阶段，对一名有手牌的男性角色使用。每名女性角色各获得其一张手牌并将一张手牌交给你，然后比较你与其的手牌数，手牌少的角色对手牌多的角色造成1点伤害。【笑里藏刀】：出牌阶段，对一名其他角色使用。该角色摸X张牌(X为其已损失的体力数)，然后你对其造成1点伤害。），然后本回合的结束阶段，若你于本回合内未造成过伤害，你失去1点体力。</td>
+		<strong>连计</strong>——出牌阶段限一次，你可弃置一张手牌，然后令一名其他角色使用牌堆中的一张随机武器牌，令其对你指定的一名角色使用【杀】，若其没有使用【杀】，则将其装备区的武器交给任意角色。<br />
+		<strong>谋逞</strong>——觉醒技，回合开始时，如果你本局游戏发动过至少3次“连计”，则你失去“连计”，获得“矜功”。 <br />
+		<span class="getskill">矜功</span>——出牌阶段限一次，你可以将一张装备牌或【杀】当一张锦囊牌使用（三选一）。（含专属锦囊——【美人计】：出牌阶段，对一名有手牌的男性角色使用。每名女性角色各获得其一张手牌并将一张手牌交给你，然后比较你与其的手牌数，手牌少的角色对手牌多的角色造成1点伤害。【笑里藏刀】：出牌阶段，对一名其他角色使用。该角色摸X张牌(X为其已损失的体力数)，然后你对其造成1点伤害。）</td>
 	<th class='xianding'>限定</th>
 </tr>
 <tr>
@@ -5593,6 +5593,41 @@
 </tr>
 
 <tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>荀　谌</th>
+	<td></td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>锋略</strong>——出牌阶段开始时，你可以与一名角色拼点，若你赢，该角色将其区域内的各一张牌交给你；若你没赢，你交给其一张牌。拼点结算后你可以令其获得你拼点的牌。<br />
+		<strong>谋识</strong>——出牌阶段限一次，你可以将一张手牌交给一名角色，若如此做，当其于其下回合的出牌阶段内对一名角色造成伤害后，若是此阶段其第一次对该角色造成伤害，你摸一张牌。</td>
+	<th class='onlines'>Online</th>
+</tr>
+
+<tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>审　配</th>
+	<td></td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>刚直</strong>——锁定技，其他角色对你造成的伤害，和你对其他角色造成的伤害均视为体力流失。<br />
+		<strong>备战</strong>——回合结束后，你可以令一名角色将手牌补至体力上限(至多为5)。该角色回合开始时，若其手牌数为全场最多，则其本回合内不能使用牌指定其他角色为目标。</td>
+	<th class='onlines'>Online</th>
+</tr>
+
+<tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>高　览</th>
+	<td></td>
+	<td>4</td>
+	<td class='jineng'>
+		<strong>袭营</strong>——出牌阶段开始时，你可以弃置一张非基本手牌并令所有其他角色选择一项：弃置一张牌；本回合内不能使用或打出牌。</td>
+	<th class='onlines'>Online</th>
+</tr>
+
+<tr>
 	<td>LE 001</td>
 	<td class='shen'>神</td>
 	<th>关　羽</th>
@@ -5864,5 +5899,5 @@
 </table>
 </div></section>
 
-<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/06/19</footer>
+<footer><p><img src='https://zsx.neocities.org/pic/logo.png' alt="Foliage" /><br />© 2006-2020 | 最后更新 2020/06/29</footer>
 </body></html>
